Fixed Oncoprint controls - Adjusted the height of minimap button - Removed the gap between Add clinical tracks and Sort buttons when study does not contain molecular profiles

--- a/src/shared/components/oncoprint/controls/styles.scss
+++ b/src/shared/components/oncoprint/controls/styles.scss
@@ -119,10 +119,6 @@
     
   }
   
-  .oncoprint__controls__minimap_button {
-    padding: 5px 8px 6px 10px !important;
-  }
-  
   .Select {
     
     margin-right:10px;
